--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -21,12 +21,23 @@
 }
 
 #login form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 16em;
-  width: 90%;
+    /*
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 16em;
+    width: 90%;
+   */
+    
+    position: fixed;
+    bottom: 130px;
+    left: calc(50% - 130px);
+    max-width: 16em;
+    width: 90%;
+    backdrop-filter: blur(0px);
+    padding: 14px;
+    border: 1px solid #eee;
 }
 
 #login.recaptcha form {
